--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@ h1 {
   color: white;
 }
 
+.container {
+  display: grid;
+}
+
 #timeline {
   display: flex;
   flex-direction: column-reverse;
   background-color: lightblue;
   border: 5px solid;
-  margin-left: 350px;
   padding: 20px;
   gap: 20px;
 }
