--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h1 {
 
 .container {
   display: grid;
+  grid-template-columns: 1fr 2fr 3fr 2fr 1fr;
+  grid-template-rows: 1fr 500px 1fr 1fr;
 }
 
 #timeline {
@@ -14,6 +16,7 @@ h1 {
   border: 2px solid;
   padding: 20px;
   gap: 20px;
+  grid-column: 3 / 4;
 }
 
 .post {
@@ -23,3 +26,4 @@ h1 {
   border: 2px solid;
   border-color: black;
 }
+
