--- a/style.css
+++ b/style.css
@@ -30,5 +30,16 @@ h1 {
 }
 
 #navbar {
+  background-color: lightblue;
   grid-column: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  gap: 10px;
+}
+
+.button {
+  border: 2px dotted black;
+  text-align: center;
+  padding: 10px;
 }
