--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 
 #timeline {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   background-color: lightblue;
   border: 2px solid;
   padding: 20px;
