--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 .container {
   display: grid;
   grid-template-columns: 1fr 2fr 3fr 2fr 1fr;
-  grid-template-rows: 1fr 500px 1fr 1fr;
+  /* grid-template-rows: 1fr 500px 1fr 1fr; */
 }
 
 #timeline {
