--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body {
+  background-color: #15202b;
+  color: white;
+}
+
 h1 {
-  background-color: lightblue;
+  /* background-color: lightblue; */
   color: white;
   margin: 0;
   padding: 0;
@@ -14,32 +19,62 @@ h1 {
 #timeline {
   display: flex;
   flex-direction: column;
-  background-color: lightblue;
-  border: 2px solid;
-  padding: 20px;
-  gap: 20px;
+  /* background-color: lightblue; */
+  /* border: 2px solid; */
+  gap: 2px;
   grid-column: 3 / 4;
 }
 
+/* individual post */
 .post {
-  background-color: orange;
+  display: grid;
+  background-color: rgb(235, 167, 41);
   padding: 15px;
   height: 100px;
-  border: 2px solid;
-  border-color: black;
+  border: .5px solid;
+  border-radius: 10px;
+  border-color: gray;
 }
 
+.post:hover {
+  background-color: #496989
+}
+
+.postUser {
+  
+}
+
+/* navbar */
 #navbar {
-  background-color: lightblue;
+  /* background-color: lightblue; */
   grid-column: 2 / 3;
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
   gap: 10px;
 }
 
 .button {
-  border: 2px dotted black;
+  border: 2px solid white;
+  border-radius: 10px;
   text-align: center;
   padding: 10px;
 }
+
+/* create post */
+fieldset {
+  display: grid;
+}
+
+input {
+  border-radius: 10px;
+}
+
+input#body {
+  height: 50px;
+}
+
+#submit.button {
+  padding: 0px;
+  margin-top: 10px;
+}
+
